[gd_scene load_steps=8 format=3 uid="uid://ypense6xgocw"]

[ext_resource type="Script" uid="uid://b8y5yue756raf" path="res://scripts/exporter.gd" id="1_5xmf3"]
[ext_resource type="PackedScene" uid="uid://11576jk4hasr" path="res://scenes/conveyors/conveyor_inventory.tscn" id="3_gyke5"]
[ext_resource type="PackedScene" uid="uid://lnerfb6s67on" path="res://scenes/conveyors/direction_controller.tscn" id="4_vmw3s"]
[ext_resource type="Texture2D" uid="uid://chfgkhdg8qksn" path="res://assets/exporter.png" id="5_3raww"]
[ext_resource type="PackedScene" uid="uid://duj0a22bmdyba" path="res://scenes/conveyors/from_direction_controller.tscn" id="5_13qfy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0n3d"]
size = Vector2(9, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5enbc"]
size = Vector2(17, 16.5)

[node name="Exporter" type="Node2D"]
script = ExtResource("1_5xmf3")

[node name="ConveyorInventory" parent="." instance=ExtResource("3_gyke5")]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConveyorInventory"]
shape = SubResource("RectangleShape2D_b0n3d")

[node name="DirectionController" parent="." instance=ExtResource("4_vmw3s")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DirectionController"]
shape = SubResource("RectangleShape2D_b0n3d")

[node name="FromDirectionController" parent="." instance=ExtResource("5_13qfy")]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(0, -3.5)
texture = ExtResource("5_3raww")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_5enbc")

[connection signal="item_held" from="ConveyorInventory" to="." method="_on_conveyor_inventory_item_held"]
[connection signal="directions_changed" from="DirectionController" to="." method="_on_direction_controller_directions_changed"]
[connection signal="direction_changed" from="FromDirectionController" to="." method="_on_from_direction_controller_direction_changed"]
